<resources>
    <string name="app_name">Amanrow</string>
    <string name="user_name">UserName</string>
    <string name="submit">Submit</string>
    <string name="user_pwd">Password</string>
    <string name="error_pwd">Enter Password</string>
    <string name="error_username">Enter User Name</string>
    <string name="add_product">Add Product</string>
    <string name="stock_available">Stock Available</string>
    <string name="store_name">Store Name</string>
    <string name="challan_name">Challan Number</string>
    <string name="address">Address</string>
    <string name="date">Date</string>

    <string name="connection">Please check your internet connection</string>
    <string name="something_wrong">Something went wrong, please try again later.</string>
    <string name="network_available">You do not have any network.</string>
    <string name="msg_cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_change_pwd">Change Password</string>
    <string name="logout">Logout</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_customercare">Customer Care</string>
    <string name="hint_email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>
    <string name="hint_name">Name</string>
    <string name="hint_contact">Contact Number</string>
    <string name="msg_name">enter name.</string>
    <string name="msg_email">enter email</string>
    <string name="update">Update</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_pwd">Old Password</string>
    <string name="hint_new_pwd">New Password</string>
    <string name="hint_cnfm_pwd">Confirm Password</string>
    <string name="error">Please enter field</string>
    <string name="permission">Permission</string>
    <string name="menu_roll">MyRole</string>
    <string name="case_status"><font color="#ffffff">Case Status : </font></string>
    <string name="client_name">Client Name</string>
    <string name="client_subject">Client Subject :</string>
    <string name="opponent_name">Opponent Name</string>
    <string name="court_name">Court Name</string>
    <string name="progress_date">Progress Date</string>
    <string name="progress_discription">Progress Discription</string>
    <string name="case_detail">Case</string>
    <string name="hearing_detail">Hearing</string>
    <string name="hearing_detail_client">Hearing Detail</string>
    <string name="case_subject">Case Subject</string>
    <string name="courte_data">Court date</string>
    <string name="case_code">Case Code</string>
    <string name="attachment">Attachment</string>
    <string name="remark">Remark</string>
    <string name="judgment">Judgment</string>
    <string name="menu_hearing_staff">Hearing Staff</string>
    <string name="code">Code</string>
    <string name="subject">Subject</string>
    <string name="client">Client</string>
    <string name="case_no">Case No</string>
    <string name="case_">Case#</string>

    <string name="case_type">Case Type</string>
    <string name="case_lawsuit">Lawsuit</string>
    <string name="case_lavel">Level</string>
    <string name="case_defendant">Defendant</string>
    <string name="case_plaintiff">Plaintiff</string>
    <string name="location_">Location</string>
    <string name="court">Court</string>
    <string name="building">Building</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="arabi">العربية</string>
    <string name="msg_code">Please enter the code here received from your lawyer office.</string>
    <string name="msg_info">Note: We already to generated your code.</string>
    <string name="msg_info2">Please ask your attorney office to give it to you.</string>
    <string name="msg_register">If you don\'t have account please register from here.</string>
    <string name="register">Register</string>
    <string name="or">-       or       -</string>
    <string name="user_pwd_cnfm">Confirm Password</string>
    <string name="pwd_match">Password is not match.</string>
    <string name="status">Status</string>
    <string name="subject_name">Subject Name</string>
    <string name="laywer_office">Laywer Office</string>
    <string name="court_lavel">Court Lavel</string>
    <string name="case_numb">Case No</string>
    <string name="moj_number">Moj Number</string>
    <string name="statuss">Status :</string>
    <string name="Cases">Cases</string>
    <string name="time">Time</string>
    <string name="floor">Floor</string>
    <string name="room">Room</string>
    <string name="comment">Comment</string>
    <string name="cases">Cases</string>
    <string name="cases_detail">Case Detail</string>
    <string name="go_to_login">Go to login</string>
    <string name="msg_register1">If you have account already.Please login here</string>
    <string name="appeal_court">Appeal Court</string>
    <string name="msg_login1">Create your login account</string>
    <string name="user_name_new">New User name</string>
    <string name="user_pwd_new">New Password</string>
    <string name="user_pwd_cnfm_new">Re enter Password</string>
    <string name="laywer">Lawyer</string>
    <string name="no_">No#</string>
    <string name="moj_">MOJ#</string>
    <string name="msg_app">A product of</string>
    <string name="app_by">amanrow</string>
    <string name="sign_up_msg">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="copyright">2020 itegrityPro</string>
    <string name="profil_update">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="court_location">Location</string>
    <string name="no">No#</string>
    <string name="save">Save</string>
    <string name="court_time">Court Time</string>
    <string name="floor_no">Floor No.</string>
    <string name="room_no">Room No.</string>
    <string name="langSetting">LANGUAGE</string>
    <string name="title_activity_home_lawyer">HomeLawyerActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hearings">Hearings</string>
    <string name="remarks">Remarks</string>
    <string name="Attachment">Attachment</string>
    <string name="laywer_symbol">i</string>
    <string name="discription">Description</string>
    <string name="lang_selection">Language Selection</string>
    <string name="appversion">App Version 1.0 </string>
    <string-array name="judgment_str">
                <item>Malaysia</item>
        <!--        <item>United States</item>-->
    </string-array>
</resources>
