<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

        <include layout="@layout/toolbar_default"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp">
        <EditText
            android:id="@+id/edt_storename"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/store_name"
            android:background="@drawable/edt_box"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/edt_challan_no"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/challan_name"
            android:background="@drawable/edt_box"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"/>
        <TextView
            android:id="@+id/edt_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/date"
            android:background="@drawable/edt_box"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:gravity="center|left"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/address"
            android:background="@drawable/edt_box"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"/>


        <Button
            android:id="@+id/btn_sumbimt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/submit"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_gray"/>


    </LinearLayout>

</LinearLayout>