<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        android:id="@+id/card_view"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.app.amanrow.customview.CustomTextView
                android:id="@+id/txt_laywer_office"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/laywer_office"
                android:textColor="@color/gray"

                android:textSize="16sp"
                app:edittextfont="OpenSans-Regular.ttf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <com.app.amanrow.customview.CustomTextView
                android:id="@+id/txt_court_lavel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/court_lavel"
                android:textColor="@color/gray"

                android:textSize="16sp"
                app:edittextfont="OpenSans-Regular.ttf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <com.app.amanrow.customview.CustomTextView
                android:id="@+id/txt_case_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/location_"
                android:textColor="@color/gray"

                android:textSize="16sp"
                app:edittextfont="OpenSans-Regular.ttf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <com.app.amanrow.customview.CustomTextView
                android:id="@+id/txt_moj_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/moj_number"
                android:textColor="@color/gray"

                android:textSize="16sp"
                app:edittextfont="OpenSans-Regular.ttf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <com.app.amanrow.customview.CustomTextView
                android:id="@+id/txt_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/floor"
                android:textColor="@color/gray"

                android:textSize="16sp"
                app:edittextfont="OpenSans-Regular.ttf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />




        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
